# nix-templates

./: flake.nix
cpp/: .gitignore  CMakeLists.txt  justfile
cpp/apps/: CMakeLists.txt  main.cpp  main.hpp
cpp/nix/: dependencies.nix
cpp/src/: CMakeLists.txt  lib.cpp  main.cpp
java-basic/: flake.nix
kubos/: flake.nix  justfile
kubos/.cargo/: config.toml
kubos/.devcontainer/: Dockerfile  devcontainer.json
kubos/nix/: dependencies.nix  kubos.nix  shell.nix
leptos/: Trunk.toml  flake.nix  justfile
leptos-csr/: Trunk.toml  flake.nix  index.html  justfile
leptos-csr/.cargo/: config.toml
leptos/.cargo/: config.toml
leptos/src/: main.rs
rust/: flake.nix
rust/.cargo/: config.toml
rust/nix/: crane.nix  dependencies.nix
shells/: flake.nix
shells/csharp/: flake.nix
shells/generic/: flake.nix
shells/java/: flake.nix
shells/python/: flake.nix  pyproject.toml
